# Moveit_r6bot_ctrl

./: README.md
ctrl_r6bot_moveit_config/: CMakeLists.txt  package.xml
ctrl_r6bot_moveit_config/config/: ctrl_r6bot.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
ctrl_rbot/: CMakeLists.txt  ctrl_r6bot.xml  package.xml
ctrl_rbot/config/: ctrl_r6bot_controller.yaml
ctrl_rbot/hardware/: r6bot_hardware.cpp
ctrl_rbot/hardware/include/: r6bot_hardware.hpp
ctrl_rbot/launch/: ctrl_r6bot_controller.launch.py  ctrl_r6bot_view.launch.py  moveit.rviz  moveit_controller.launch.py  panda_moveit_config_demo.rviz
ctrl_rbot/src/: ctrl_rbot.cpp  mtc_ctrl.cpp
ctrl_rbot/urdf/: ctrl_r6bot.ros2_control.xacro  ctrl_r6bot.urdf.xacro  odrive_muti.ros2_control.xacro
ros2_control_demo_description/r6bot/rviz/: view_robot.rviz
ros2_control_demo_description/rrbot/rviz/: rrbot.rviz
